refactor: remove redundant code and unused variables